--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-img">🛒</div>
+                    <div class="project-img">🤖</div>
                     <div class="project-content">
                         <h3>Deepfake Detection Web Application</h3>
                         <p>Built a web application that enables users to upload images and videos, automatically selects the most suitable model
@@ -735,7 +735,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">📊</div>
+                    <div class="project-img">🚗</div>
                     <div class="project-content">
                         <h3>Roadside CCTV-Based Vehicle Classification and Noise Estimation System</h3>
                         <p>
@@ -752,7 +752,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="project-img">🤖</div>
+                    <div class="project-img">🚨</div>
                     <div class="project-content">
                         <h3>ROI-Based Change Detection and Automation System</h3>
                         <p>
