--- a/index.html
+++ b/index.html
@@ -682,9 +682,8 @@
                         This demonstrates that our proposed approach can enhance performance even in a simple baseline model, thereby supporting the generality and scalability of the method.
                     </p>
                     <div class="publication-links">
+                        <a href="https://github.com/ssoDTlab/Centroid-GAN">Code</a>
                         <a href="#">PDF</a>
-                        <a href="#">DOI</a>
-                        <a href="#">Code</a>
                     </div>
                 </div>
                 
@@ -702,9 +701,8 @@
                         These findings verify the effectiveness of the proposed approach in improving image quality while preserving diversity in GAN-based generation.
                     </p>
                     <div class="publication-links">
+                        <a href="https://github.com/ssoDTlab/CosDivGAN">Code</a>
                         <a href="#">PDF</a>
-                        <a href="#">DOI</a>
-                        <a href="#">Slides</a>
                     </div>
                 </div>
             </div>
