--- a/index.html
+++ b/index.html
@@ -650,8 +650,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <div class="profile-img">👨‍💻</div>
-                <img width="500" height="500" alt="Image" src="https://github.com/user-attachments/assets/3f405a0b-1c6d-478b-a8a9-3b01e337276b" />
+                <div class="profile-img"><img width="500" height="500" alt="Image" src="https://github.com/user-attachments/assets/3f405a0b-1c6d-478b-a8a9-3b01e337276b"></div>
                 <div class="about-text">
                     <h3>Hola!</h3>
                     <p>
