--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <section id="about" style="padding-top: 8rem;">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <div class="about-content"><img width="500" height="500" alt="Image" src="https://github.com/user-attachments/assets/3f405a0b-1c6d-478b-a8a9-3b01e337276b" /></div>
+            <img width="500" height="500" alt="Image" src="https://github.com/user-attachments/assets/3f405a0b-1c6d-478b-a8a9-3b01e337276b" />
                 <div class="about-text">
                     <h3>Hola!</h3>
                     <p>
