--- a/index.html
+++ b/index.html
@@ -652,8 +652,10 @@
                 <div class="about-text">
                     <h3>Hola!</h3>
                     <p>
-                    my name is Sangwon Seo. I am passionate about research and development in image processing and computer vision, with a particular focus on building software that can detect objects and automatically take actions based on the results. I believe such technologies play a key role in enabling autonomous systems that can perceive and respond to their environments without human intervention.
-                    In addition, I am deeply interested in leveraging generative models such as VAEs, GANs, and Diffusion Models for data augmentation. My research goes beyond simply improving model performance, I aim to maximize the utility of data, enhance generalization capabilities, and ultimately connect these methods to practical real-world applications.
+                        I enjoy exploring new methodologies and applying them in practice to understand how they work in real-world settings. 
+                        My motivation and ultimate goal is to ensure that the knowledge and outcomes from these efforts contribute to making the world a better place, 
+                        even in small but meaningful ways.
+
                     </p>
                 </div>
             </div>
