--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 <div class="about-text">
                     <h3>Hola!</h3>
                     <p>
-                        my name is Sangwon Seo.
+                        My name is Sangwon Seo.
                         I enjoy exploring new methodologies and applying them in practice to understand how they work in real-world settings. 
                         My motivation and ultimate goal is to ensure that the knowledge and outcomes from these efforts contribute to making the world a better place, 
                         even in small but meaningful ways.
