--- a/index.html
+++ b/index.html
@@ -668,6 +668,29 @@
         <div class="container">
             <h2 class="section-title">Publications</h2>
             <div class="publications-grid">
+                
+                <div class="publication-card">
+                    <div class="publication-year">2025</div>
+                    <h3 class="publication-title">A Training Method for Improving Image Diversity in Generative Adversarial Networks Using a Perceptual Cosine Similarity Loss</h3>
+                    <p class="publication-authors">Sang-Won Seo, Hyun-Cheol Park</p>
+                    <p class="publication-venue">Journal of the Korea Institute of Information and Communication Engineering, vol. 29, issue 10, 2025</p>
+                    <p class="publication-abstract">
+                        Generative Adversarial Networks (GANs) demonstrate strong performance in high-quality image synthesis but still suffer from mode collapse, 
+                        where only a limited range of samples is generated. 
+                        This study proposes a diversity loss based on cosine similarity that can be applied without modifying the network architecture. 
+                        The proposed loss reduces redundant generation by minimizing the cosine similarity between feature vectors extracted from generated images,
+                        thereby enhancing diversity. 
+                        This method allows for the preservation of semantic continuity in the latent space while encouraging the generation of more varied outputs. 
+                        The effectiveness of the proposed loss is evaluated on the LSUN Bedroom and CelebA datasets using the DCGAN architecture. 
+                        Experimental results based on FID and LPIPS metrics confirm that our method can effectively improve both the diversity and quality of generated images. 
+                        Notably, these improvements are achieved without any changes to the network architecture, relying solely on the addition of a simple loss term during training.
+                    </p>
+                    <div class="publication-links">
+                        <a href="https://github.com/ssoDTlab/LatentFlowGAN">Code</a>
+                        <a href="#">PDF</a>
+                    </div>
+                </div>
+
                 <div class="publication-card">
                     <div class="publication-year">2025</div>
                     <h3 class="publication-title">Feature Space-Based Center Constraint Loss for Improving Quality and Diversity in GANs</h3>
