--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     </p>
                     <div class="publication-links">
                         <a href="https://github.com/ssoDTlab/LatentFlowGAN">Code</a>
-                        <a href="#">PDF</a>
+                        <a href="https://github.com/ssoDTlab/Portfolio/blob/main/document/latentFlowGAN.pdf">PDF</a>
                     </div>
                 </div>
 
